# rp-2026-shielded-rl

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  run_compare.py  run_eval.py  run_experiments.py  run_lstm.py  run_sweep.py  run_sweep_v3.py  run_sweep_v4.py  run_sweep_v5.py  show_map.py
docs/: notes_22_04.md  notes_28_04.md
src/: agent.py  constants.py  fire_manager.py  grid.py  main.py  metric.py  simulator.py  state.py  visualization.py
src/agents/: mpc.py  random.py  tmpc.py
src/rl/: agent.py  analyze_compare.py  callbacks.py  configs.py  diagnose.py  env.py  frontier.py  reward.py  run_compare.py  run_compare_parallel.py  run_experiments.py  run_lstm.py  train.py  visualize.py
test/: agent_test.py  metric_test.py  randagent_test.py  simulator_test.py  test_agent.py  test_failing.py  test_metric.py  test_mpcagent.py  test_randagent.py  test_simulator.py
