[project]
name = "rp-2026-autonomous-search-and-rescue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gymnasium>=0.29,<1.3",
    "matplotlib>=3.10.8",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "pygame>=2.6.0",
    "sb3-contrib>=2.8.0",
    "scipy>=1.17.1",
    "stable-baselines3>=2.3",
    "tcod>=21.2.0",
    "torch>=2.12.0",
]
